compiler/src/test/resources/golden/errors/type_interp_non_printable.dawn
type Tag = | A | B

fn f(t: Tag) -> String = "tag: $t"
